niro/src/test/resources/negative/using-nonexisting-type.ql
form UsingReservedWordAsIdentifier {
 "Did you sell a house in 2010?" unknwon: non-existing
}